...
      name="viewModel"
      type="com.hardik.mvvmapp.home.viewmodel.HomeViewModel" />

  </data>

  <androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:id="@+id/llRoot"
      android:layout_width="match_parent"
...
        android:layout_height="@dimen/_42sdp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light">

        <TextView
          android:id="@+id/txtTitle"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_gravity="center"
          android:fontFamily="@font/kreon_regular"
          android:gravity="center"
          android:padding="@dimen/_5sdp"
...
        app:defaultNavHost="true"
        app:navGraph="@navigation/main_navigation_graph" />

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
      android:id="@+id/navigationView"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="start"
      android:background="@color/colorWhite"
      android:theme="@style/NavigationDrawerStyle"
      app:headerLayout="@layout/nav_header"
...
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_3sdp"-->
    <!--android:background="@drawable/drop_shadow"-->
    <!--/>-->

    <!--<TableRow-->
    <!--android:id="@+id/menuScanView"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_36sdp"-->
    <!--android:orientation="horizontal"-->
    <!--&gt;-->

    <!--<ImageView-->
...
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_3sdp"-->
    <!--android:background="@drawable/drop_shadow"-->
    <!--/>-->

    <!--<TableRow-->
    <!--android:id="@+id/menuBusinessFragment"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_36sdp"-->
    <!--android:orientation="horizontal"-->
    <!--&gt;-->

    <!--<ImageView-->
...
    <!--android:layout_marginStart="@dimen/_15sdp"-->
    <!--android:contentDescription="@string/app_name"-->
    <!--android:src="@drawable/ic_side_menu_business"-->
    <!--/>-->

    <!--<TextView-->
    <!--android:text="@string/str_side_menu_find"-->
    <!--style="@style/SideMenuTextView"-->
    <!--/>-->

    <!--</TableRow>-->

    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_3sdp"-->
    <!--android:background="@drawable/drop_shadow"-->
    <!--/>-->

    <!--<TableRow-->
    <!--android:id="@+id/menuRedeemReward"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_36sdp"-->
    <!--android:orientation="horizontal"-->
    <!--android:visibility="gone"-->
    <!--&gt;-->

...
    <!--android:layout_height="@dimen/_3sdp"-->
    <!--android:background="@drawable/drop_shadow"-->
    <!--android:visibility="gone"-->
    <!--/>-->

    <!--<TableRow-->
    <!--android:id="@+id/giftRewardFragment"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_36sdp"-->
    <!--android:orientation="horizontal"-->
    <!--android:visibility="gone"-->
    <!--&gt;-->

...
    <!--android:layout_height="@dimen/_2sdp"-->
    <!--android:background="@drawable/drop_shadow"-->
    <!--android:visibility="gone"-->
    <!--/>-->

    <!--<TableRow-->
    <!--android:id="@+id/menuBrowseRewardFragment"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_36sdp"-->
    <!--android:orientation="horizontal"-->
    <!--&gt;-->

    <!--<ImageView-->
...
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_3sdp"-->
    <!--android:background="@drawable/drop_shadow"-->
    <!--/>-->

    <!--<TableRow-->
    <!--android:id="@+id/badgesFragment"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_36sdp"-->
    <!--android:orientation="horizontal"-->
    <!--&gt;-->

    <!--<ImageView-->
...
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_3sdp"-->
    <!--android:background="@drawable/drop_shadow"-->
    <!--/>-->

    <!--<TableRow-->
    <!--android:id="@+id/profileFragment"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_36sdp"-->
    <!--android:orientation="horizontal"-->
    <!--&gt;-->

    <!--<ImageView-->
...
