...
  <string name="str_new_password">New Password</string>
  <string name="str_new_password_again">New Password Again</string>

  <!-- Login/Register Validation -->
  <string name="str_error_empty_first_name">Please enter valid first name</string>
  <string name="str_error_empty_last_name">Please enter valid last name</string>
  <string name="str_error_invalid_email_message">Please enter valid email address</string>
  <string name="str_error_empty_address">Please enter valid address</string>
  <string name="str_error_empty_address_1">Please enter valid address 1</string>
  <string name="str_error_empty_city">Please enter valid city name</string>
  <string name="str_error_empty_zip">Please enter valid zip code</string>
  <string name="str_error_empty_dob">Please enter valid date of birth</string>
  <string name="str_error_empty_password_message">Please enter valid password</string>

  <!-- Dummy User -->
  <string name="user_name">Hardik Dungrani</string>
  <string name="user_name_sort">Hardik</string>
  <string name="user_email">hardik.techark@gmail.com</string>
  <string name="user_address">Surat</string>
...
